Added while loop portion

--- a/Python_by_Example__Learning_to_Pro.ipynb
+++ b/Python_by_Example__Learning_to_Pro.ipynb
@@ -1654,7 +1654,8 @@
    "source": [
     "<div style=\"background-color:#0f172a; padding:20px; border-radius:12px; text-align:center;\">\n",
     "    <h1 style=\"color:#38bdf8; margin-bottom:10px;\">Part 05</h1>\n",
-    "    <h3 style=\"color:yellow; font-weight:400;\">Loops</h3>\n",
+    "    <h2 style=\"color:yellow; font-weight:400;\">Loops</h2>\n",
+    "    <h3 style=\"color:white; font-weight:400;\">For Loop</h3>\n",
     "</div>"
    ]
   },
@@ -2174,9 +2175,690 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0869d524-5638-48d3-90ef-cb3323abb924",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#0f172a; padding:20px; border-radius:12px; text-align:center;\">\n",
+    "    <h1 style=\"color:#38bdf8; margin-bottom:10px;\">While Loop</h1>\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f00b3565-cc53-430c-a308-29587946f0e3",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>045.</strong> Start with a total of 0. \n",
+    "        While the total is 50 or less, ask the user to enter a number.\n",
+    "        Add the number to the total and display: “The total is… [total]”.\n",
+    "        Stop the loop once the total exceeds 50.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "83315442-5e54-437d-9fa9-a54c83c55283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the number  3\n",
+      "Enter the number  43\n",
+      "Enter the number  4\n",
+      "Enter the number  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total is 53\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "while total <= 50:\n",
+    "    num = int(input(\"Enter the number \"))\n",
+    "    total += num\n",
+    "print(f'The total is {total}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c4f0390-bcc1-445d-9faa-d80be0a4faa7",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>046.</strong> Ask the user to enter a number. \n",
+    "        Keep asking until they enter a number greater than 5. \n",
+    "        Then display: “The last number you entered was a [number]” and stop.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "b3ffc851-ea63-490a-88b0-f44856be686b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number  2\n",
+      "Enter a number  3\n",
+      "Enter a number  1\n",
+      "Enter a number  4\n",
+      "Enter a number  5\n",
+      "Enter a number  3\n",
+      "Enter a number  7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The last number you have entered was 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter a number \"))\n",
+    "while num <= 5:\n",
+    "    num = int(input(\"Enter a number \"))\n",
+    "print(f'The last number you have entered was {num}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98389fe3-8f18-4604-baa6-ccb8beb93066",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>047.</strong> Ask the user to enter two numbers and add them together. \n",
+    "        Then ask if they want to add another number. \n",
+    "        If they answer “y”, keep asking for numbers and adding them to the total. \n",
+    "        Stop when they do not answer “y” and display the final total.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "46344e89-3ec1-48eb-b17c-184d4baf0be0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter first number  3\n",
+      "Enter another number  3\n",
+      "If you want to add another  y\n",
+      "Enter another number  5\n",
+      "If you want to add another  y\n",
+      "Enter another number  4\n",
+      "If you want to add another  n\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total is 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter first number \"))\n",
+    "total = num\n",
+    "while True:\n",
+    "    num2 = int(input(\"Enter another number \"))\n",
+    "    total += num2\n",
+    "\n",
+    "    ask = input(\"If you want to add another \").lower()\n",
+    "    if ask == 'y':\n",
+    "        pass\n",
+    "    else:\n",
+    "        break\n",
+    "print(f\"Total is {total}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fda3b00-5dc8-4ac5-8fa9-d843c48ef503",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>048.</strong> Ask for the name of someone the user wants to invite to a party. \n",
+    "        Display “[name] has now been invited” and increase the count by 1. \n",
+    "        Ask if they want to invite someone else. \n",
+    "        Repeat until they do not want to invite anyone else, then display the total number of people coming.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2b08c0b3-8524-4582-9d96-e795c4c9a5bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Name the person you want to invite to party  Mansoor\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mansoor has now invited to the party\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "If you want to add another  y\n",
+      "Name the person you want to invite to party  Salfi\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salfi has now invited to the party\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "If you want to add another  y\n",
+      "Name the person you want to invite to party  Inam\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inam has now invited to the party\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "If you want to add another  n\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total 3 persons were invited to the party\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "while True:\n",
+    "    name = input(\"Name the person you want to invite to party \")\n",
+    "    count += 1\n",
+    "\n",
+    "    print(f'{name} has now invited to the party')\n",
+    "    \n",
+    "    ask = input(\"If you want to add another \").lower()\n",
+    "    if ask == 'y':\n",
+    "        pass\n",
+    "    else:\n",
+    "        break\n",
+    "print(f'The total {count} persons were invited to the party')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26e3e142-4809-4430-9303-ef1b8c26faa2",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>049.</strong> Set a variable called <code>compnum</code> to 50. \n",
+    "        Ask the user to guess a number. \n",
+    "        While the guess is not equal to <code>compnum</code>, tell them if it is too low or too high \n",
+    "        and ask them to guess again. \n",
+    "        When they guess correctly, display: “Well done, you took [count] attempts”.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "24318862-fee6-4211-ac78-58cad8272d0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess a Number 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too Low\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess a Number 9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too Low\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess a Number 23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too Low\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess a Number 55\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too High\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess a Number 50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Well done, You Took 5 Attempts\n"
+     ]
+    }
+   ],
+   "source": [
+    "compnum = 50\n",
+    "count = 0\n",
+    "\n",
+    "while True:\n",
+    "    guess = int(input(\"Guess a Number\"))\n",
+    "    if guess == compnum:\n",
+    "        count += 1\n",
+    "        print(f'Well done, You Took {count} Attempts')\n",
+    "        break\n",
+    "\n",
+    "    elif guess > compnum:\n",
+    "        print(\"Too High\")\n",
+    "        count += 1\n",
+    "\n",
+    "    else:\n",
+    "        print(\"Too Low\")\n",
+    "        count += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a90df6b-e773-46c6-9968-198af33c991a",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>050.</strong> Ask the user to enter a number between 10 and 20. \n",
+    "        If the number is under 10, display “Too low” and ask again. \n",
+    "        If the number is above 20, display “Too high” and ask again. \n",
+    "        Repeat until they enter a number between 10 and 20, then display: “Thank you”.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "68078b4b-5c47-44c9-b88e-f2eb01d24c39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number between 10 & 20  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too Low\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number between 10 & 20  23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too High\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number between 10 & 20  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too Low\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number between 10 & 20  23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too High\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number between 10 & 20  12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thank You!\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    num = int(input(\"Enter a number between 10 & 20 \"))\n",
+    "    if num >= 10 and num <= 20:\n",
+    "        print(\"Thank You!\")\n",
+    "        break\n",
+    "\n",
+    "    elif num < 10:\n",
+    "        print(\"Too Low\")\n",
+    "\n",
+    "    else:\n",
+    "        print(\"Too High\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2a04c2d-697b-4381-9b25-0ee2e6dcd299",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>051.</strong> Using the song “10 green bottles”, display:\n",
+    "        “There are [num] green bottles hanging on the wall, [num] green bottles hanging on the wall, \n",
+    "        and if 1 green bottle should accidentally fall”. \n",
+    "        Ask: “How many green bottles will be hanging on the wall?” \n",
+    "        If correct, display: “There will be [num] green bottles hanging on the wall”. \n",
+    "        Repeat until they get it right. When the number reaches 0, display: “There are no more green bottles hanging on the wall”.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "54b3b1a4-d195-46f7-9c48-f4c9c35bf08e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 10 green bottles hanging on the wall and if 1 green bottle should acidantly fall\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many green bottle on the wall 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You Guess Wrong\n",
+      "There are 9 green bottles hanging on the wall and if 1 green bottle should acidantly fall\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many green bottle on the wall 8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Their will be 8 bottle hanging on the wall\n",
+      "There are 8 green bottles hanging on the wall and if 1 green bottle should acidantly fall\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many green bottle on the wall 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You Guess Wrong\n",
+      "There are 7 green bottles hanging on the wall and if 1 green bottle should acidantly fall\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many green bottle on the wall 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You Guess Wrong\n",
+      "There are 6 green bottles hanging on the wall and if 1 green bottle should acidantly fall\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many green bottle on the wall 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Their will be 5 bottle hanging on the wall\n",
+      "There are 5 green bottles hanging on the wall and if 1 green bottle should acidantly fall\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many green bottle on the wall 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Their will be 4 bottle hanging on the wall\n",
+      "There are 4 green bottles hanging on the wall and if 1 green bottle should acidantly fall\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many green bottle on the wall 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Their will be 3 bottle hanging on the wall\n",
+      "There are 3 green bottles hanging on the wall and if 1 green bottle should acidantly fall\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many green bottle on the wall 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Their will be 2 bottle hanging on the wall\n",
+      "There are 2 green bottles hanging on the wall and if 1 green bottle should acidantly fall\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many green bottle on the wall 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Their will be 1 bottle hanging on the wall\n",
+      "There are 1 green bottles hanging on the wall and if 1 green bottle should acidantly fall\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many green bottle on the wall 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You Guess Wrong\n",
+      "Their is no green bottle hanging on the wall\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 10\n",
+    "while num > 0:\n",
+    "    print(f'There are {num} green bottles hanging on the wall and if 1 green bottle should acidantly fall')\n",
+    "    num -= 1\n",
+    "    \n",
+    "    guess = int(input(\"How many green bottle on the wall\"))\n",
+    "    if guess == num:\n",
+    "        print(f'Their will be {num} bottle hanging on the wall')\n",
+    "    else:\n",
+    "        print(f'You Guess Wrong')\n",
+    "\n",
+    "print('Their is no green bottle hanging on the wall')    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cd8d3a9-e289-4d1b-bbce-e261fe5fc8fe",
+   "id": "234a505b-18b2-478e-9c91-934a800f4b16",
    "metadata": {},
    "outputs": [],
    "source": []
