--- a/Python_by_Example__Learning_to_Pro.ipynb
+++ b/Python_by_Example__Learning_to_Pro.ipynb
@@ -2856,12 +2856,538 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17d5387b-1c74-4761-9359-2363596af2a5",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:black; padding:14px; border-radius:10px; text-align:center; border:5px solid green;\">\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fe1313f-047f-4a22-ae94-25f3d9c3ce49",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#0f172a; padding:20px; border-radius:12px; text-align:center;\">\n",
+    "    <h1 style=\"color:#38bdf8; margin-bottom:10px;\">Part 06</h1>\n",
+    "    <h3 style=\"color:yellow; font-weight:400;\">Random</h3>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "234a505b-18b2-478e-9c91-934a800f4b16",
+   "execution_count": 57,
+   "id": "0a273eef-4b8d-4c50-9a25-93d1e3d58932",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "575528ba-9e10-47fb-8c86-d5a598dd46a4",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Easy</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>052.</strong> Display a random integer between 1 and 100 (inclusive).\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "bfa46354-4890-44a1-ad9b-d20a8171be67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = random.randint(1,100)\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9108b50-3b81-4528-af66-8726014ca4d5",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Easy</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>053.</strong> Display a random fruit from a list of five fruits.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "1a1a23c1-5986-45e0-87a9-d085ddbf5588",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grapes\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['Orange', \"Banana\", \"Apple\", \"Mango\", \"Grapes\"]\n",
+    "print(random.choice(fruits))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "498f93dd-e9c6-4bfb-a48c-de1f48603167",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>054.</strong> Randomly choose either heads or tails (“h” or “t”). \n",
+    "        Ask the user to make their choice. \n",
+    "        If their choice matches the random value, display “You win”, otherwise display “Bad luck”. \n",
+    "        At the end, tell the user what the computer selected.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "7ced32ff-3d40-43d4-917b-719b43aed45a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice h/t  h\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You Win\n"
+     ]
+    }
+   ],
+   "source": [
+    "computer_choice = random.choice(['h', 't'])\n",
+    "user_choice = input(\"Enter your choice h/t \").lower()\n",
+    "\n",
+    "if user_choice == computer_choice:\n",
+    "    print(\"You Win\")\n",
+    "else:\n",
+    "    print(\"Bad Luck\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eefee1d-cdac-4e00-966e-04f4b1722b8d",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>055.</strong> Randomly choose a number between 1 and 5. \n",
+    "        Ask the user to pick a number. \n",
+    "        If they guess correctly, display “Well done”. \n",
+    "        If not, tell them if their guess is too high or too low, and allow a second guess. \n",
+    "        If correct on the second guess, display “Correct”, otherwise display “You lose”.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "bb7baeeb-a734-4709-b7d7-450a4412190b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess Number  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too High\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess Number  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You Win\n"
+     ]
+    }
+   ],
+   "source": [
+    "chose = random.randint(1,5)\n",
+    "over = False\n",
+    "\n",
+    "for i in range(2):\n",
+    "    user = int(input(\"Guess Number \"))\n",
+    "    if user == chose:\n",
+    "        over = True\n",
+    "        print(\"You Win\")\n",
+    "        break\n",
+    "    elif user > chose:\n",
+    "        print(\"Too High\")\n",
+    "    else:\n",
+    "        print(\"Too Low\")\n",
+    "\n",
+    "if not over:\n",
+    "    print(f\"You Lose, Computer Chose {chose}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6c0f479-0d7b-4cd1-be86-ba2052bb0bde",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>056.</strong> Randomly pick a whole number between 1 and 10. \n",
+    "        Ask the user to enter numbers repeatedly until they guess the randomly selected number.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "5a2dd850-a2c9-4f15-b3f9-8125fb710d74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess Number  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alhamdullilah, finally you guess the number which is 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "chose = random.randint(1,10)\n",
+    "\n",
+    "while True:\n",
+    "    guess = int(input(\"Guess Number \"))\n",
+    "    if guess == chose:\n",
+    "        print(f\"Alhamdullilah, finally you guess the number which is {chose}\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d03567ef-de96-4526-8708-f49cc42655e6",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>057.</strong> Update program 056 so that before each new guess, \n",
+    "        the program tells the user if their previous guess was too high or too low.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "65b8d018-3584-4ecd-9819-8ca59991c081",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess Number  56\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too High\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess Number  32\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too High\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess Number  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too Low\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess Number  23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too Low\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess Number  26\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too Low\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess Number  30\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alhamdullilah, finally you guess the number which is 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "chose = random.randint(1,56)\n",
+    "\n",
+    "while True:\n",
+    "    guess = int(input(\"Guess Number \"))\n",
+    "    if guess == chose:\n",
+    "        print(f\"Alhamdullilah, finally you guess the number which is {chose}\")\n",
+    "        break\n",
+    "    elif guess > chose:\n",
+    "        print(\"Too High\")\n",
+    "    else:\n",
+    "        print(\"Too Low\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e62022a-6b06-42d1-9182-15c154051ded",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>058.</strong> Make a maths quiz that asks five questions by generating two random numbers for each question (e.g., [num1] + [num2]). \n",
+    "        Ask the user to enter the answer. \n",
+    "        If correct, add a point to their score. \n",
+    "        At the end, display how many questions they got correct out of five.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "d82e8416-6929-4156-ba60-67a6c26c3818",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "23 + 2 = ?  25\n",
+      "6 + 1 = ?  7\n",
+      "22 + 7 = ?  2\n",
+      "34 + 73 = ?  107\n",
+      "34 + 68 = ?  102\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You score 4 points\n"
+     ]
+    }
+   ],
+   "source": [
+    "points = 0\n",
+    "for i in range(5):\n",
+    "    num1 = random.randint(1,34)\n",
+    "    num2 = random.randint(1,100)\n",
+    "    ans = int(input(f'{num1} + {num2} = ? '))\n",
+    "    if ans == num1 + num2:\n",
+    "        points += 1\n",
+    "\n",
+    "print(f'You score {points} points')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "040a4cf3-6579-4068-b72e-b0e089a72ca2",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>059.</strong> Display five colours and ask the user to pick one. \n",
+    "        If they pick the correct colour, display “Well done”. \n",
+    "        If incorrect, give a witty clue involving the correct colour (e.g., “I bet you are GREEN with envy”) and ask again. \n",
+    "        Repeat until the user guesses correctly.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "0ca9c4c8-139d-4dc3-9cd3-38e232939588",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pick a colour from the list below:\n",
+      "- RED\n",
+      "- BLUE\n",
+      "- GREEN\n",
+      "- YELLOW\n",
+      "- PURPLE\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Your choice:  RED\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Don’t feel BLUE, try again!\n",
+      "Pick a colour from the list below:\n",
+      "- RED\n",
+      "- BLUE\n",
+      "- GREEN\n",
+      "- YELLOW\n",
+      "- PURPLE\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Your choice:  BLUE\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Well done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "colours = [\"RED\", \"BLUE\", \"GREEN\", \"YELLOW\", \"PURPLE\"]\n",
+    "correct_colour = random.choice(colours)\n",
+    "\n",
+    "while True:\n",
+    "    print(\"Pick a colour from the list below:\")\n",
+    "    for colour in colours:\n",
+    "        print(\"-\", colour)\n",
+    "\n",
+    "    guess = input(\"Your choice: \").strip().upper()\n",
+    "\n",
+    "    if guess == correct_colour:\n",
+    "        print(\"Well done!\")\n",
+    "        break\n",
+    "    else:\n",
+    "        clues = {\n",
+    "            \"RED\": \"I can see you are feeling a little RED-faced!\",\n",
+    "            \"BLUE\": \"Don’t feel BLUE, try again!\",\n",
+    "            \"GREEN\": \"I bet you are GREEN with envy!\",\n",
+    "            \"YELLOW\": \"Are you feeling a bit YELLOW? Try again!\",\n",
+    "            \"PURPLE\": \"That guess wasn’t very PURPLE-icious!\"\n",
+    "        }\n",
+    "        print(clues[correct_colour])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd614e6c-dea6-4664-b0ee-1191c44e0629",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:black; padding:14px; border-radius:10px; text-align:center; border:5px solid green;\">\n",
+    "\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
